0.5.1 - Added history reading and parsing - Added evaulation of history data (still work in progress) - Added custom actions (#1455), so that we can manually do "Wake Up and Tune" (new button in actions) - Started decoding DailyTotals records (need TDD for bolus and basal).